add new module crop

--- a/README
+++ b/README
@@ -1,5 +1,13 @@
 # 智能排序->自动重命名->自动按照第一级子文件夹名打包成7z
 
+功能一、智能排序->自动重命名->自动打包。
+
+功能二、自动压缩指定文件夹的图片，判断宽度大于1920则处理成1920宽，如果是webp则处理成jpg，如果是png则处理成jpg，如果大小大于1M则压缩。
+
+功能三、全自动裁剪指定文件夹的长图，判断若高度大于3000，则裁剪成3000高度一张小图，并且自动重命名。
+
+分别使用：node compress/node crop/node index
+
 假如文件夹：d://downloads/jobs
 
 其中有子文件夹：
